[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Scripts/parallax_background.gd" id="1_eku5q"]
[ext_resource type="Texture2D" uid="uid://bdpixj7hpr87u" path="res://Assets/back.png" id="3_8vu1d"]
[ext_resource type="Script" path="res://Scripts/background.gd" id="3_kq4vw"]

[node name="Background" type="Node2D"]
script = ExtResource("3_kq4vw")
metadata/_edit_vertical_guides_ = [544.0]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2(0.5, 0.5)
script = ExtResource("1_eku5q")

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="ParallaxBackground/Layer1"]
position = Vector2(240, 1135.5)
scale = Vector2(1.6, 113.55)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Layer1"]
offset_left = -64.0
offset_right = 544.0
offset_bottom = 2271.0
texture = ExtResource("3_8vu1d")
expand_mode = 5
stretch_mode = 4

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="ParallaxBackground/Layer2"]
position = Vector2(240, 1135.5)
scale = Vector2(1.6, 113.55)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Layer2"]
offset_left = -64.0
offset_right = 544.0
offset_bottom = 2271.0
texture = ExtResource("3_8vu1d")
expand_mode = 5
stretch_mode = 4

[connection signal="screen_exited" from="ParallaxBackground/Layer1/VisibleOnScreenNotifier2D" to="ParallaxBackground" method="_layer1_exited"]
[connection signal="screen_exited" from="ParallaxBackground/Layer2/VisibleOnScreenNotifier2D" to="ParallaxBackground" method="_layer2_exited"]
